# refrakt

./: .dockerignore  .gitignore  .gitmodules  README.md  SETUP.md  backend.py  dev.env  dev.env.example  dev.yml  dev.yml.example  docker-compose.prod.yml  docker-compose.yml  doppler.yaml  justfile  justfile.prod  prod.env  prod.env.example  prod.yml  prod.yml.example  pyproject.toml  refrakt.yml
cloudflare/: 1b304a4e-dcc4-4145-a59b-da05876d926a.json  220bc2f3-cd03-4c06-b658-20c8c718cc04.json
configs/: autoencoder.yaml  convnext.yaml  resnet.yaml  simclr.yaml  srgan.yaml
prometheus/: docker-entrypoint.sh  prometheus.prod.yml  prometheus.yml
scripts/: add-prod-secrets-to-doppler.sh  add-secrets-to-doppler.sh  setup-cloudflare-from-doppler.sh
